--- a/user_management/templates/user_management/layout.html
+++ b/user_management/templates/user_management/layout.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="{% url 'management:login' %}">Log In</a>
                     </li>
                     <li class="nav-item my-auto">
-                        <a class="nav-link" href="/register/">Register</a>
+                        <a class="nav-link" href="{% url 'management:register' %}">Register</a>
                     </li>
             {% endif %}
             </ul>
