fix: create filtering for user articles

--- a/user_management/templates/user_management/user_detail.html
+++ b/user_management/templates/user_management/user_detail.html
@@ -32,8 +32,8 @@
       {% csrf_token %}
       <button type="submit" class="btn btn-primary w-100">Toggle Editor/Reader</button>
     </form>
-
   </div>
+  <div id="articles-container" class="mt-4"></div>
 {% endblock %}
 
 
