--- a/user_management/templates/user_management/layout.html
+++ b/user_management/templates/user_management/layout.html
@@ -24,14 +24,14 @@
                 {% if user.is_authenticated %}
                     {% if user.is_superuser %}
                         <li class="nav-item my-auto">
-                            <a class="nav-link" href="/user_management/users/">User List</a>
+                            <a class="nav-link" href="{% url 'management:user_list' %}">User List</a>
                         </li>
                         <li class="nav-item my-auto">
-                            <a class="nav-link" href="/user_management/users/create/">Create User</a>
+                            <a class="nav-link" href="{% url 'management:user_create' %}">Create User</a>
                         </li>
                     {% elif user.is_editor %}
                         <li class="nav-item my-auto">
-                            <a class="nav-link" href="news:article_create">Create Article</a>
+                            <a class="nav-link" href="{% url 'news:article_create' %}">Create Article</a>
                         </li>
                         <li class="nav-item my-auto">
                             <a class="nav-link" href="/">List of Articles</a>
