--- a/user_management/templates/user_management/layout.html
+++ b/user_management/templates/user_management/layout.html
@@ -15,21 +15,21 @@
         <div class="container min-vh-100 d-flex align-items-center flex-column">
             <ul class="nav">
                 <li class="nav-item my-auto">
-                    {% if user.is_authenticated %}
-                        Signed in as <strong>{{ user.username }}</strong>.
+                    {% if request.user.is_authenticated %}
+                        Signed in as <strong>{{ request.user.username }}</strong>.
                     {% else %}
                         Not signed in.
                     {% endif %}
                 </li>
-                {% if user.is_authenticated %}
-                    {% if user.is_superuser %}
+                {% if request.user.is_authenticated %}
+                    {% if request.user.is_superuser %}
                         <li class="nav-item my-auto">
                             <a class="nav-link" href="{% url 'management:user_list' %}">User List</a>
                         </li>
                         <li class="nav-item my-auto">
                             <a class="nav-link" href="{% url 'management:user_create' %}">Create User</a>
                         </li>
-                    {% elif user.is_editor %}
+                    {% elif request.user.is_editor %}
                         <li class="nav-item my-auto">
                             <a class="nav-link" href="{% url 'news:article_create' %}">Create Article</a>
                         </li>
