--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block body %}
-    <div class="card w-50">
+    <div class="card w-sm-50 w-100">
         <div class="card-header">
           <div class="row">
             <div class="col-6">
