--- a/news/templates/news/article_form.html
+++ b/news/templates/news/article_form.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block body %}
-    <div class="card w-50">
+    <div class="card width top-m">
         <div class="card-header">
           <h1 class="text-center text-uppercase">
             Create Article
