--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -2,10 +2,15 @@
 {% load static %}
 
 {% block body %}
-    <div class="card w-sm-50 w-100">
+    <div class="card width top-m">
         <div class="card-header">
           <div class="row">
-            <div class="col-6">
+            <div 
+            class="{% if user.is_authenticated and user.is_editor and user.author == request.user %}
+            col-6
+            {% else %}
+            col-12
+            {% endif %}">
               <h1 class="text-uppercase">
                 News Articles
               </h1>
@@ -25,7 +30,11 @@
           class="list-group-item list-group-item-action d-flex flex-row justify-content-between" 
           aria-current="true">
             <a href="{% url 'news:article_detail' article.id %}" 
-            class="text-decoration-none col-10" 
+            class="text-decoration-none {% if user.is_authenticated and user.is_editor and user.author == request.user %}
+            col-10
+            {% else %}
+            col-12
+            {% endif %}" 
             aria-current="true">
               {{ article.title }} 
             </a>
