--- a/news/templates/news/layout.html
+++ b/news/templates/news/layout.html
@@ -6,52 +6,108 @@
         <title>{% block title %}News agency{% endblock %}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="{% static 'news/styles.css' %}">
         {% block script %}
         {% endblock %}
     </head>
     <body>
-        <div class="container-fluid min-vh-100 d-flex align-items-center flex-column">
-            <ul class="nav justify-content-center w-100">
-                <li class="nav-item my-auto">
+        <div class="container-fluid min-vh-100 d-flex align-items-center position-relative flex-column">
+            <!-- Toggle button for mobile view -->
+            <div class="dropdown d-md-none position-absolute top left m-2">
+                <button 
+                title="Navigation"
+                class="btn dropdown-toggle display" 
+                type="button" id="dropdownMenuButton" 
+                data-bs-toggle="dropdown" 
+                aria-expanded="false">
+                    <i class="bi bi-list"></i>
+                </button>
+                <ul class="dropdown-menu p-2" aria-labelledby="dropdownMenuButton">
+                    <li class="nav-item my-auto">
+                        {% if user.is_authenticated %}
+                            Signed in as <strong>{{ user.username }}</strong>.
+                        {% else %}
+                            Not signed in.
+                        {% endif %}
+                    </li>
                     {% if user.is_authenticated %}
-                        Signed in as <strong>{{ user.username }}</strong>.
+                        {% if user.is_superuser %}
+                            <li class="nav-item my-auto">
+                                <a class="dropdown-item" href="{% url 'management:user_list' %}">User List</a>
+                            </li>
+                            <li class="nav-item my-auto">
+                                <a class="dropdown-item" href="{% url 'management:user_create' %}">Create User</a>
+                            </li>
+                        {% elif user.is_editor %}
+                            <li class="nav-item my-auto">
+                                <a class="dropdown-item" href="{% url 'news:article_create' %}">Create Article</a>
+                            </li>
+                            <li class="nav-item my-auto">
+                                <a class="dropdown-item" href="/">List of Articles</a>
+                            </li>
+                        {% endif %}
+                        <li class="nav-item my-auto">
+                            <form method="post" action="{% url 'news:logout' %}">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-link dropdown-item" style="padding: 0;">Log Out</button>
+                            </form>
+                        </li>
                     {% else %}
-                        Not signed in.
-                    {% endif %}
-                </li>
-                {% if user.is_authenticated %}
-                    {% if user.is_superuser %}
                         <li class="nav-item my-auto">
-                            <a class="nav-link" href="{% url 'management:user_list' %}">User List</a>
+                            <a class="dropdown-item" href="{% url 'management:login' %}">Log In</a>
                         </li>
                         <li class="nav-item my-auto">
-                            <a class="nav-link" href="{% url 'management:user_create' %}">Create User</a>
-                        </li>
-                    {% elif user.is_editor %}
-                        <li class="nav-item my-auto">
-                            <a class="nav-link" href="{% url 'news:article_create' %}">Create Article</a>
-                        </li>
-                        <li class="nav-item my-auto">
-                            <a class="nav-link" href="/">List of Articles</a>
+                            <a class="dropdown-item" href="{% url 'management:register' %}">Register</a>
                         </li>
                     {% endif %}
+                </ul>
+            </div>
+
+            <!-- Navigation section for larger screens -->
+            <div class="d-none d-md-block w-100">
+                <ul class="nav justify-content-center w-100">
                     <li class="nav-item my-auto">
-                        <form method="post" action="{% url 'news:logout' %}">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-link nav-link" style="padding: 0;">Log Out</button>
-                        </form>
+                        {% if user.is_authenticated %}
+                            Signed in as <strong>{{ user.username }}</strong>.
+                        {% else %}
+                            Not signed in.
+                        {% endif %}
                     </li>
-                {% else %}
-                    <li class="nav-item my-auto">
-                        <a class="nav-link" href="{% url 'management:login' %}">Log In</a>
-                    </li>
-                    <li class="nav-item my-auto">
-                        <a class="nav-link" href="{% url 'management:register' %}">Register</a>
-                    </li>
-            {% endif %}
-            </ul>
+                    {% if user.is_authenticated %}
+                        {% if user.is_superuser %}
+                            <li class="nav-item my-auto">
+                                <a class="nav-link" href="{% url 'management:user_list' %}">User List</a>
+                            </li>
+                            <li class="nav-item my-auto">
+                                <a class="nav-link" href="{% url 'management:user_create' %}">Create User</a>
+                            </li>
+                        {% elif user.is_editor %}
+                            <li class="nav-item my-auto">
+                                <a class="nav-link" href="{% url 'news:article_create' %}">Create Article</a>
+                            </li>
+                            <li class="nav-item my-auto">
+                                <a class="nav-link" href="/">List of Articles</a>
+                            </li>
+                        {% endif %}
+                        <li class="nav-item my-auto">
+                            <form method="post" action="{% url 'news:logout' %}">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-link nav-link" style="padding: 0;">Log Out</button>
+                            </form>
+                        </li>
+                    {% else %}
+                        <li class="nav-item my-auto">
+                            <a class="nav-link" href="{% url 'management:login' %}">Log In</a>
+                        </li>
+                        <li class="nav-item my-auto">
+                            <a class="nav-link" href="{% url 'management:register' %}">Register</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
             <hr>
             <div class="body position-relative h-100 contents">
                 {% block body %}
