--- a/user_management/static/user_management/styles.css
+++ b/user_management/static/user_management/styles.css
@@ -16,3 +16,14 @@
 .h-fifty {
     height: 50vh;
 }
+
+.width {
+    width: 100%;
+}
+
+@media (min-width: 576px) {
+
+    .width {
+        width: 50%;
+    }
+}
