--- a/user_management/templates/user_management/login.html
+++ b/user_management/templates/user_management/login.html
@@ -1,7 +1,7 @@
 {% extends "user_management/layout.html" %}
 {% load form_tags %}
 {% block body %}
-<div class="card my-auto w-50">
+<div class="card my-auto width">
     <div class="card-header">
       <h2 class="text-center text-uppercase">
         Login
