fix: share common styles

--- a/news/templates/news/article_confirm_delete.html
+++ b/news/templates/news/article_confirm_delete.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block body %}
-    <div class="card w-50 mx-auto mt-5">
+    <div class="card width mx-auto mt-5">
         <div class="card-header">
             <h1 class="text-center text-uppercase">Confirm Deletion</h1>
         </div>
