--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -11,7 +11,7 @@
             {% else %}
             col-12
             {% endif %}">
-              <h1 class="text-uppercase">
+              <h1 class="text-uppercase ms-5">
                 News Articles
               </h1>
             </div>
