--- a/news/templates/news/user_articles.html
+++ b/news/templates/news/user_articles.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block body %}
-    <div class="card w-50">
+    <div class="card width">
         <div class="card-header">
           <div class="row">
             <div class="col-12">
-              <h1 class="text-uppercase">
+              <h1 class="text-uppercase ms-5">
                {{ author.username }}'s Articles
               </h1>
             </div>
