--- a/user_management/templates/user_management/user_create.html
+++ b/user_management/templates/user_management/user_create.html
@@ -1,7 +1,7 @@
 {% extends "user_management/layout.html" %}
 {% load form_tags %}
 {% block body %}
-<div class="card w-50">
+<div class="card width">
   <div class="card-header">
     <h1 class="text-center text-uppercase">
       Create User
