--- a/user_management/templates/user_management/user_detail.html
+++ b/user_management/templates/user_management/user_detail.html
@@ -1,7 +1,7 @@
 {% extends "user_management/layout.html" %}
 {% load static %}
 {% block body %}
-  <div class="card w-50">
+  <div class="card width">
     <div class="card-header">
       <h1 class="text-center text-uppercase">
         <p class="fw-bold" onclick="getUserArticles({{ user.id }})">
