--- a/user_management/templates/user_management/register.html
+++ b/user_management/templates/user_management/register.html
@@ -2,7 +2,7 @@
 {% load form_tags %}
 {% block body %}
 
-    <div class="card my-auto w-50">
+    <div class="card my-auto width">
         <div class="card-header">
           <h2 class="text-center text-uppercase">
             Register
