fix: remove border

--- a/user_management/templates/user_management/user_detail.html
+++ b/user_management/templates/user_management/user_detail.html
@@ -35,7 +35,7 @@
       <button type="submit" class="btn btn-primary w-100">Toggle Editor/Reader</button>
     </form>
   </div>
-  <div id="articles-container" class="mt-4 w-50"></div>
+  <div id="articles-container" class="mt-4 width"></div>
 {% endblock %}
 
 
